# twitter-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: auto_summon_claude.sh
.github/workflows/: ci.yml  claude.yml  docs.yml  issue-triage.yml  live-smoke.yml  minimax-test.yml  pr-review.yml  publish.yml
docs/: MCP_PROTOCOL_ANALYSIS.md  TECHNICAL.en.md  TECHNICAL.ja.md  TECHNICAL.md  TECHNICAL.zh.md  VENDORING.en.md  VENDORING.ja.md  VENDORING.md  VENDORING.zh.md  cli.en.md  cli.ja.md  cli.md  cli.zh.md  index.en.md  index.ja.md  index.md  index.zh.md  install.en.md  install.ja.md  install.zh.md
scripts/: gen_api_docs.py
tests/: test_articles.py  test_claude_trigger_guard.py  test_cli.py  test_community_parsing.py  test_cookies.py  test_docs_api_listing.py  test_docs_cli_listing.py  test_fixture_shapes.py  test_human_cards.py  test_install_doc.py  test_list_parsing.py  test_live_smoke_coverage.py  test_pr_review_v2.py  test_replies.py  test_server.py  test_text_truncation.py  test_tools.py  test_tweet_parsing.py  test_user_parsing.py  test_vendor.py  test_video_download.py  test_workflow_simplified.py
twitter_mcp/: server.py
twitter_mcp/_vendor/twikit/: __init__.py  bookmark.py  community.py  constants.py  errors.py  geo.py  list.py  media.py  message.py  notification.py  streaming.py  trend.py  tweet.py  user.py  utils.py
twitter_mcp/_vendor/twikit/_captcha/: base.py  capsolver.py
twitter_mcp/_vendor/twikit/client/: client.py  gql.py  v11.py
twitter_mcp/_vendor/twikit/guest/: client.py  tweet.py  user.py
twitter_mcp/_vendor/twikit/ui_metrics/: __init__.py  dom.py
twitter_mcp/_vendor/twikit/x_client_transaction/: __init__.py  cubic_curve.py  interpolate.py  transaction.py  utils.py
