[project]
name = "twitter-mcp"
version = "0.1.0"
description = "Twitter MCP server powered by twikit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]",
    "twikit @ git+https://github.com/d60/twikit.git@refs/pull/412/head",
]

[project.scripts]
twitter-mcp = "twitter_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
