[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twikit-mcp"
version = "0.1.1"
description = "Twitter/X MCP server powered by twikit — no API key needed, free forever"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["mcp", "twitter", "twikit", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]",
    "httpx[socks]",
    "beautifulsoup4",
    "filetype",
    "pyotp",
    "lxml",
    "webvtt-py",
    "m3u8",
    "js2py-3-13",
]

[project.urls]
Homepage = "https://github.com/tangivis/twitter-mcp"
Repository = "https://github.com/tangivis/twitter-mcp"
Issues = "https://github.com/tangivis/twitter-mcp/issues"

[project.scripts]
twikit-mcp = "twitter_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["twitter_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"twitter_mcp/_vendor/**" = ["E", "F", "W", "I"]
